samples/_failures_safe/1761339971_1ef9c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13fadcd7.c: In function ‘main’:
./samples/SAFE/__tmp_13fadcd7.c:155:17: error: expected declaration or statement at end of input
  155 |                 }
      |                 ^
./samples/SAFE/__tmp_13fadcd7.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13fadcd7.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13fadcd7.c:155:17: error: expected declaration or statement at end of input
